# git-credential-github

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  LICENSE.md  PRE_v2_2_CONFIG.md  README.md  TODO_RELEASE.md  debug.sh  gh-login-logo.kra  gh-login-logo.kra~  pack.sh  verify.sh
.fleet/: run.json
.site/: metadata.toml
packaging/: .gitignore  PKGBUILD  makepkg_choco.sh  makepkg_deb.sh
packaging/aur/gh-login/: PKGBUILD
packaging/choco/: LICENSE.txt  VERIFICATION.txt
packaging/debian/: pack.sh
packaging/win/: package.sh
packaging/win/git-credential-github/: git-credential-github.nuspec
src/: credhelper.rs  credstore.rs  ghauth.rs  main.rs  paramparsing.rs  params.rs  utils.rs  verbosity.rs
src/credhelper/: mod.rs  params.rs
