[package]
name = "gh-login"
authors = ["ldev"]
version = "0.1.1"
license-file="LICENSE.md"
edition = "2021"
description="A simple git credentials helper for github"
homepage="https://github.com/Xgames123/gh-login"

[[bin]]
name = "git-credential-gh-login"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3", features = ["default", "cargo", "derive"]}
reqwest = {version = "0.11", features= ["json"]}
serde = {version="1.0", features=["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#keyring = {version = "2.0", features=["linux-default-keyutils"]}
shlex = {version= "1.1.0"}
log = {version="0.4"}
stderrlog = {version="0.5"}
