[package]
name = "git-credential-github"
authors = ["ldev <ldev at ldev dot eu dot org>"]
version = "2.1.0"
license-file="LICENSE.md"
edition = "2021"
description="A simple git credentials helper for github"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5", features = ["default", "cargo", "derive"]}
reqwest = {version = "0.12", features= ["json"]}
serde = {version="1.0", features=["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
shlex = {version= "1.3.0"}
log = {version="0.4"}
open={version="5.1.2"}
thiserror={version="1.0.58"}
stderrlog = {version="0.6"}
